--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
   padding:0;
   box-sizing: border-box;
 }
-/* body{
+body{
   background-image: url(img/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-} */
+}
 #header, #main{
   min-height: 100vh;
   display: flex;
